[package]
name = "nostr-arena-js"
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/kako-jun/nostr-arena-js"
authors = ["kako-jun <ppdg85ae99aaq2q2@gmail.com>"]
description = "WebAssembly bindings for nostr-arena"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nostr-arena = { git = "https://github.com/kako-jun/nostr-arena.git" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
