[package]
name = "nostr-arena-js"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/kako-jun/nostr-arena-js"
authors = ["kako-jun"]
description = "Node.js bindings for nostr-arena - Nostr-based multiplayer game matchmaking"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core nostr-arena functionality
nostr-arena = { git = "https://github.com/kako-jun/nostr-arena.git" }

# NAPI-RS for Node.js bindings
napi = { version = "2.2", default-features = false, features = ["napi8", "serde-json", "async", "tokio_rt"] }
napi-derive = "2.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread"] }

[build-dependencies]
napi-build = "2.2"
